--- a/cloud.yml
+++ b/cloud.yml
@@ -1,6 +1,6 @@
 type: "vapor"
 swift_version: "4.1.0"
-run_parameters: "serve --port 8080 --hostname 0.0.0.0 --env=production"
+run_parameters: "serve --port 8080 --hostname 0.0.0.0 --env production"
 
 config:
     production:
