--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -38,7 +38,7 @@ env:
   ECS_CLUSTER: djmckay-tech-cluster                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: aws/djmckay-tech-run-task-definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: djmckay-tech-app           # set this to the name of the container in the
+  CONTAINER_NAME: djmckay-tech           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
 permissions:
