--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -74,12 +74,7 @@ jobs:
         # Build a docker container and
         # push it to ECR so that it can
         # be deployed to ECS.
-        docker build \
-          --build-arg DATABASE_AWS_HOSTNAME=${{ secrets.DATABASE_AWS_HOSTNAME }} \ 
-          --build-arg DATABASE_AWS_USER=${{ secrets.DATABASE_AWS_USER }} \
-          --build-arg DATABASE_AWS_PASSWORD=${{ secrets.DATABASE_AWS_PASSWORD }} \
-          --build-arg DATABASE_AWS_DB=${{ secrets.DATABASE_AWS_DB }} \
-          -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker build --build-arg DATABASE_AWS_HOSTNAME=${{ secrets.DATABASE_AWS_HOSTNAME }} --build-arg DATABASE_AWS_USER=${{ secrets.DATABASE_AWS_USER }} --build-arg DATABASE_AWS_PASSWORD=${{ secrets.DATABASE_AWS_PASSWORD }} --build-arg DATABASE_AWS_DB=${{ secrets.DATABASE_AWS_DB }} -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
