--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -40,6 +40,7 @@ env:
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: djmckay-tech           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
+  DATABASE_AWS_HOSTNAME: djmckay-tech.crenbjixljaz.us-east-1.rds.amazonaws.com
 
 permissions:
   contents: read
