--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -40,7 +40,7 @@ env:
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: djmckay-tech           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
-  DATABASE_AWS_HOSTNAME: djmckay-tech.crenbjixljaz.us-east-1.rds.amazonaws.com
+  DATABASE_AWS_HOSTNAME: $DATABASE_AWS_HOSTNAME  #djmckay-tech.crenbjixljaz.us-east-1.rds.amazonaws.com
 
 permissions:
   contents: read
@@ -75,7 +75,8 @@ jobs:
         # Build a docker container and
         # push it to ECR so that it can
         # be deployed to ECS.
-        docker build --build-arg DATABASE_AWS_HOSTNAME=${{ env.DATABASE_AWS_HOSTNAME }} --build-arg DATABASE_AWS_USER=${{ secrets.DATABASE_AWS_USER }} --build-arg DATABASE_AWS_PASSWORD=${{ secrets.DATABASE_AWS_PASSWORD }} --build-arg DATABASE_AWS_DB=${{ secrets.DATABASE_AWS_DB }} -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        #--build-arg DATABASE_AWS_HOSTNAME=${{ env.DATABASE_AWS_HOSTNAME }} --build-arg DATABASE_AWS_USER=${{ secrets.DATABASE_AWS_USER }} --build-arg DATABASE_AWS_PASSWORD=${{ secrets.DATABASE_AWS_PASSWORD }} --build-arg DATABASE_AWS_DB=${{ secrets.DATABASE_AWS_DB }} -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
